# APIoty

./: Cargo.toml  README.md
src/: artistentry.rs  entry.rs  main.rs  req.rs  search.rs
