[package]
name = "aotyapi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
chromiumoxide = "0.9.1"
headless_chrome = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }
primp = "1"
futures = "0.3.32"
clap = { version = "4.6.1", features = ["derive"] }
